# frostburn

./: .gitignore  Cargo.toml  Makefile  build.rs  commit-msg  quantize.py  train.py
datafmt/: Cargo.toml
datafmt/src/: lib.rs
datagen/: Cargo.toml
datagen/src/: main.rs
dataload/: Cargo.toml
dataload/src/: lib.rs
frostburn-uci/: Cargo.toml
frostburn-uci/src/: bench.rs  main.rs  reproduce.rs
src/: draw_oracle.rs  eval.rs  history.rs  lib.rs  move_picker.rs  negamax.rs  nnue.rs  params.rs  qsearch.rs  rep_table.rs  search.rs  tt.rs  util.rs
src/nnue/: avx2.rs  avx512.rs  scalar.rs
trainer/: Cargo.toml  build.rs
trainer/src/: dataload.rs  main.rs  model.fut  nn.fut  trainer.fut
